# blender-open-mcp

./: .gitignore  .prompt  BLENDER_MCP_SETUP_GUIDE.md  COPILOT_STUDIO_FIX.md  COPILOT_STUDIO_GUIDE.md  COPILOT_STUDIO_INTEGRATION.md  CUSTOM_CONNECTOR_GUIDE.md  LICENSE  LICENSE.md  PROJECT_OVERVIEW.md  PYTHON38_USAGE.md  README.md  SETUP_CHANGES_SUMMARY.md  addon.py  app.py  azure_app.py  blender-mcp-openapi.yaml  blender-mcp-swagger2-no-auth.yaml  blender-mcp-swagger2.yaml  check_status.py  local_tunnel.py  main.py  pyproject.toml  quick-start.py  requirements.txt  run_azure.py  start-everything.ps1  startup.py  swagger_2_0_spec.json  test_all_functions.py  test_create_object.py  test_direct.py  test_formats.py  test_simple_server.py  tunnel-config.yml  verify_python_upgrade.py  wsgi.py
.github/workflows/: main_blender-open-mcp.yml
config/: README.md
config/swagger/: blender-mcp-separate-endpoints.yaml
config/tunnel/: tunnel-config.yml
docs/api/: API_COMPARISON.md
docs/copilot-studio/: COPILOT_STUDIO_GUIDE.md
docs/setup/: BLENDER_MCP_SETUP_GUIDE.md  LOCAL_SETUP_GUIDE.md  copilot-prompt-examples-complete.md  copilot-prompt-examples.md  team_setup_guide.md
docs/troubleshooting/: PYTHON311_UPGRADE_SUMMARY.md
scripts/: README.md
scripts/start/: fix-and-start.ps1  start-everything-new-window.ps1  start-everything.ps1  start-rest-server.ps1  start-server.bat  start-tunnel.bat
scripts/test/: simple-test.py  test-api-validation.ps1  test_full_mcp_server.py
src/blender_open_mcp/: __init__.py  rest_server.py  server.py  simple_server.py
